# agent-infra-dev

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  LICENSE  README.md  docker-build-test.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: agents.yaml  agents.yaml.example  app.yaml  llm.yaml  llm.yaml.example  mcp_servers.yaml  mcp_servers.yaml.example  storage.yaml
docs/: DUAL_SDK_ARCHITECTURE.md  MCP_INTEGRATION_STRATEGY.md  MCP_SERVER_CONFIGURATION.md  MCP_TROUBLESHOOTING.md  websocket-streaming-reasoning-short.md  websocket-streaming-reasoning.md
docs/collaboration-bus-architecture/: AGENT_TEAM_COLLABORATION.md  API_ENDPOINTS_SPECIFICATION.md  API_JSON_SCHEMAS.md  API_SDK_DEVELOPMENT_GUIDE.md  API_USE_CASES_AND_SCENARIOS.md  COLLABORATION_BUS_ARCHITECTURE.md  openapi.yaml
docs/round-table/: README.md  TESTING_STRATEGY.md  VISUAL_CONCEPT.md
plans/: gui-refactoring.md  http-streaming-api.md  mcp-bridge-refactor.md  qwen-agent-mcp-scheduler.md  real-time-streaming-reasoning.md  storage-adapter-layer.md
round-table/: .env.example  .gitignore  Makefile  README.md  alembic.ini  pytest.ini
round-table/api/: requirements.txt
round-table/docker/: .env.example  Dockerfile.api  deployment.md  docker-compose.yml
round-table/plans/: claude-code-integration.md  round-table-mvp.md
round-table/scripts/: dev.sh  test.sh
round-table/sdk/python/: README.md  pyproject.toml
round-table/sdk/python/src/roundtable/: __init__.py  client.py  collaborations.py  config.py  exceptions.py  messages.py  models.py  sandboxes.py  workspaces.py
round-table/sdk/python/tests/: test_sdk.py
round-table/sdk/python/tests/e2e/: __init__.py  test_sdk_workflows.py
scripts/githooks/: README.md  install.sh  pre-commit
src/agents/: base_agent.py
src/api/: openapi_server.py  sse_endpoints.py  websocket_endpoints.py
src/core/: __init__.py  agent_adapter.py  agent_manager.py  claude_agent_adapter.py  config.py  hot_reload.py  mcp_bridge.py  mcp_direct_passage.py  mcp_function_wrapper.py  mcp_manager.py  mcp_sse_client.py  mcp_stdio_client.py  mcp_tool_converter.py  qwen_agent_adapter.py  resource_limiter.py  sandbox.py  security.py  storage_helpers.py  task_models.py  task_scheduler.py  websocket_manager.py
src/gui/: app.py  config_editor.py  websocket_chat.py
src/storage/: __init__.py  base_adapter.py  base_cache.py  base_vector_store.py  config.py  factory.py  postgres_adapter.py  redis_cache.py  sqlite_adapter.py
static/: README_WEBSOCKET.md  websocket_chat.js  websocket_head.html
tests/: test_agent_manager.py  test_agent_manager_cache_integration.py  test_agent_streaming.py  test_config.py  test_config_validation.py  test_e2e_storage_integration.py  test_gradio_app.py  test_integration.py  test_mcp_bridge.py  test_mcp_integration.py  test_mcp_manager.py  test_mcp_sse_client.py  test_openapi_server.py  test_sandbox.py  test_storage_adapters.py  test_streaming_api_integration.py  test_task_scheduler.py  test_task_scheduler_storage_integration.py
worklogs/collaboration-bus-architecture/: 00-summary.md  01-use-cases-and-scenarios.md  02-restful-api-endpoints.md  03-json-schemas-definition.md  04-openapi-specification.md
worklogs/gui-refactoring/: phase-1-baseline.md  phase-2-realtab.md  phase-3-all-tabs.md  phase-4-mainapp.md  phase-5-debugging.md
worklogs/http-streaming-api/: phase-1-core-streaming-infrastructure.md  phase-2-fastapi-streaming-response.md  phase-3-testing-and-validation.md  phase-4-documentation.md
worklogs/mcp-bridge-refactor/: phase-1-config-layer-expansion.md  phase-2-mcp-bridge-refactoring.md  phase-3-agent-adapter-updates.md  phase-4-agent-manager-integration.md  phase-5-config-validation.md  phase-6-testing-and-documentation.md
worklogs/qwen-agent-mcp-scheduler/: phase-01-project-init.md  phase-02-config-system.md  phase-03-mcp-bridge.md  phase-04-agent-manager.md  phase-05-task-scheduler.md  phase-06-openapi-api.md  phase-07-gradio-gui.md  phase-08-sandbox.md  (+2 more)
(+126 files in other folders)
